--- a/style/style.css
+++ b/style/style.css
@@ -1,290 +1,510 @@
-@charset "utf-8";
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&family=Outfit:wght@900&display=swap');
+/* @charset "utf-8"; */
+/* @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&family=Outfit:wght@900&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Gothic+A1:wght@400;500;600;700&family=Outfit:wght@900&display=swap');
 /* 로고 폰트 900/
 / font-family: 'Outfit', sans-serif; /
 / 바디 400, 700 /
 / font-family: 'Nanum Gothic', sans-serif; */
+/* 추가 폰트 400, 500, 600, 700 */
+/* font-family: 'Gothic A1', sans-serif; */
 @keyframes slides {
-  0% {
-    margin-left: 0;
-  }
-  40% {
-    margin-left: 0;
-  }
-  50% {
-    margin-left: -100%;
-  }
-  90% {
-    margin-left: -100%;
-  }
-  100% {
-    margin-left: -200%;
-  }
+ 0% {
+   margin-left: 0;
+ }
+ 40% {
+   margin-left: 0;
+ }
+ 50% {
+   margin-left: -100%;
+ }
+ 90% {
+   margin-left: -100%;
+ }
+ 100% {
+   margin-left: -200%;
+ }
 }
 body {
-  font-family: 'Nanum Gothic', sans-serif;
-  background: #f8f8f8;
+ /* font-family: 'Nanum Gothic', sans-serif; */
+ font-family: 'Gothic A1', sans-serif;
+ background: #f8f8f8;
+ word-break: keep-all;
+ word-wrap: break-word;
 }
 .header {
-  width: 100%;
-  height: 70px;
-  display: flex;
-  color: white;
-  background-color: none;
-  justify-content: space-between;
-  padding: 18px 20px 11px;
-  box-sizing: border-box;
-  z-index: 10;
+ position: relative;
+ width: 100%;
+ height: 70px;
+ display: flex;
+ color: white;
+ background-color: none;
+ justify-content: space-between;
+ padding: 18px 20px 11px;
+ box-sizing: border-box;
+ z-index: 10;
 }
 .logo {
-  margin: 4px 0 28px;
+ margin: 4px 0 28px;
 }
 .logo strong {
-  font-family: 'Outfit', sans-serif;
-  font-size: 20px;
+ font-family: 'Outfit', sans-serif;
+ font-size: 20px;
 }
 .logo em {
-  vertical-align: 2px;
+ vertical-align: 2px;
 }
 .nav__btn--mobile {
-  width: 30px;
-  height: 30px;
-  border: none;
-  background: no-repeat url(/img/list.svg);
-  background-size: 100% 100%;
+ width: 30px;
+ height: 30px;
+ border: none;
+ background: no-repeat url(/img/list.svg);
+ background-size: 100% 100%;
 }
 .nav__menu {
-  display: none;
+ display: none;
 }
 main {
-  background-color: none;
-  margin-top: -70px;
-  z-index: 0;
+ background-color: none;
+ margin-top: -70px;
+ z-index: 0;
 }
 .header-slides {
-  width: 100%;
-  position: relative;
-  overflow: hidden;
+ width: 100%;
+ position: relative;
+ overflow: hidden;
 }
-.header-slides::before {
-  content: '';
-  position: absolute;
-  top: 143px;
-  left: 7px;
-  width: 25px;
-  height: 40px;
-  background: url('../img/slide-left.svg') no-repeat;
-  background-size: cover;
+.left-btn {
+ position: absolute;
+ top: 155px;
+ left: 7px;
+ width: 25px;
+ height: 27px;
+ background: no-repeat 0 -12px url('../img/slide-left.svg');
+ background-size: cover;
+ border: none;
+ cursor: pointer;
 }
-.header-slides::after {
-  content: '';
-  position: absolute;
-  top: 143px;
-  right: 7px;
-  width: 25px;
-  height: 40px;
-  background: url('../img/slide-right.svg') no-repeat;
-  background-size: cover;
+.right-btn {
+ position: absolute;
+ top: 155px;
+ right: 7px;
+ width: 25px;
+ height: 27px;
+ background: no-repeat 0 -12px url('../img/slide-right.svg');
+ background-size: cover;
+ border: none;
+ cursor: pointer;
 }
 .slide {
-  display: flex;
-  width: calc(100% * 3);
-  height: 314px;
-  position: relative;
-  /* animation: slides 8s linear infinite; */
+ display: flex;
+ width: calc(100% * 3);
+ height: 314px;
+ /* margin-left: -100%; */
+ position: relative;
+ /* animation: slides 8s linear infinite; */
 }
 .slide > div {
-  width: calc(100%);
-  z-index: -1;
-  background-size: cover;
+ width: calc(100%);
+ background-size: cover;
 }
 .slide1 {
-  background: no-repeat url('../img/back1.png');
+ background: no-repeat url('../img/back1.png');
 }
 .slide2 {
-  background: no-repeat url('../img/back2.jpg');
+ background: no-repeat url('../img/back2.jpg');
 }
 .slide > div {
-  display: flex;
-  padding-top: 137px;
-  align-items: center;
-  flex-direction: column;
-  color: #fff;
+ display: flex;
+ padding-top: 137px;
+ align-items: center;
+ flex-direction: column;
+ color: #fff;
 }
 .slide em,
 .slide strong {
-  line-height: 31px;
-  letter-spacing: -1px;
-  text-shadow: 2px 2px 6px rgb(0 0 0 / 40%);
+ line-height: 31px;
+ letter-spacing: -1px;
+ text-shadow: 2px 2px 6px rgb(0 0 0 / 40%);
 }
 /* slide1 */
 .slide1 em {
-  font-size: 27px;
-  font-weight: 700;
+ font-size: 27px;
+ font-weight: 700;
 }
 .slide1 strong {
-  font-size: 22px;
+ font-size: 22px;
 }
-.slide1 a {
-  margin-top: 20px;
-  font-size: 14px;
-}
+/* slide1 */
 /* slide2 */
 .slide2 em {
+ font-size: 20px;
 }
 .slide2 strong {
+ font-size: 21px;
 }
-.slide2 a {
-  margin-top: 20px;
-  font-size: 14px;
+.slide a {
+ display: flex;
+ width: 252px;
+ height: 34px;
+ justify-content: center;
+ padding: 8px 0;
+ box-sizing: border-box;
+ margin-top: 20px;
+ font-size: 14px;
+ letter-spacing: -1px;
+ z-index: 20;
+ opacity: 0.6;
 }
 .slide > div > a::after {
-  content: '';
-  float: right;
-  width: 11px;
-  height: 13px;
-  background: url('../img/chevron-right.svg') no-repeat;
-  background-size: cover;
+ content: '';
+ width: 13px;
+ height: 16px;
+ background: url('../img/chevron-right.svg') no-repeat;
+ background-size: cover;
+ margin-top: -2px;
 }
 .category {
-  display: flex;
-  flex-wrap: wrap;
-  position: relative;
-  width: 100%;
+ display: flex;
+ flex-wrap: wrap;
+ position: relative;
+ width: 100%;
 }
 .category li {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 50%;
-  height: 77px;
-  text-align: center;
-  border: 1px solid #f2f2f2;
-  box-sizing: border-box;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ width: 50%;
+ height: 77px;
+ text-align: center;
+ border: 1px solid #f2f2f2;
+ box-sizing: border-box;
 }
 .category li::after {
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 1px;
-  height: 77px;
-  background-color: #f2f2f2;
-  content: '';
-}
-.category a {
+ display: block;
+ position: absolute;
+ top: 0;
+ left: 0;
+ width: 1px;
+ height: 77px;
+ background-color: #f2f2f2;
+ content: '';
 }
 .category em {
-  font-size: 18px;
-  font-weight: 500;
-  padding-right: 6px;
-  vertical-align: middle;
+ font-size: 18px;
+ font-weight: 500;
+ padding-right: 6px;
+ vertical-align: middle;
 }
 .category span {
-  font-weight: 700;
-  font-size: 12px;
-  padding: 2px 6px 3px;
-  border-radius: 10px;
-  background-color: #00b800;
-  color: white;
-  vertical-align: -1px;
+ font-weight: 700;
+ font-size: 12px;
+ padding: 2px 6px 3px;
+ border-radius: 10px;
+ background-color: #00b800;
+ color: white;
+ vertical-align: -1px;
 }
 /* culture-sect */
-
 .culture-sect {
-  background-color: #eff0f2;
-  padding-top: 7px;
-  display: flex;
-  justify-content: flex-start;
+ background-color: #eff0f2;
+ padding-top: 7px;
+ display: flex;
+ justify-content: flex-start;
 }
-
 .culture-sect > div {
-  width: 100%;
-  background-color: #fff;
-  padding: 0 20px 40px;
-  
+ width: 100%;
+ background-color: #fff;
+ padding: 0 20px 40px;
 }
 .culture-tit {
-  font-size: 24px;
-  color: #34d000;
-  padding-top: 24px;
-  padding-bottom: 20px;
-  border-bottom: 1px solid #f3f3f3;
+ font-size: 24px;
+ color: #34d000;
+ padding-top: 24px;
+ padding-bottom: 20px;
+ border-bottom: 1px solid #f3f3f3;
 }
-
-.culture-sect > h3 {
-  padding-bottom: 10px;
-  border-bottom: 2px solid #000;
-  font-size: 15px;
-  letter-spacing: -1px;
-}
+/* .culture-sect > h3 {
+padding-bottom: 10px;
+border-bottom: 2px solid #000;
+font-size: 15px;
+letter-spacing: -1px;
+} */
 .list-container {
-  padding-bottom: 20px;
+ padding-bottom: 20px;
 }
 .list-container h3 {
-  margin-top: 20px;
-  padding-bottom: 10px;
-  border-bottom: 2px solid #000;
-  font-size: 15px;
-  font-weight: 700;
-  letter-spacing: -1px;
+ margin-top: 20px;
+ padding-bottom: 10px;
+ border-bottom: 2px solid #000;
+ font-size: 15px;
+ font-weight: 700;
+ letter-spacing: -1px;
 }
 .list-container ul:first-child {
-  margin-bottom: 30px;
+ margin-bottom: 30px;
 }
 .list-container li {
-  padding: 10px 0 9px;
-  border-bottom: 1px solid #f3f3f3;
+ padding: 10px 0 9px;
+ border-bottom: 1px solid #f3f3f3;
 }
-
 .list-container li:first-child {
-  padding: 20px 0 10px;
+ padding: 20px 0 10px;
 }
-
 .list-container a {
-  line-height: 25px;
+ line-height: 25px;
 }
 .list-container li strong {
-  display: block;
-  font-size: 20px;
-  font-weight: 700;
-  color: #000
+ display: block;
+ font-size: 20px;
+ font-weight: 700;
+ color: #000;
 }
 .list-container li p {
-  font-size: 14px;
-  color: #999;
+ font-size: 14px;
+ color: #999;
 }
-
 /* footer */
-
 .footer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 30px 0;
-  border-top: 1px solid #e6e6e6;
-  font-size: 14px;
-  color: #B2B2B2;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ padding: 30px 0;
+ border-top: 1px solid #e6e6e6;
+ font-size: 14px;
+ color: #b2b2b2;
 }
-
 .footer details {
-  display: none;
+ display: none;
 }
 .footer small {
-display: flex;
-flex-direction: column;
-align-items: center;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
 }
 .footer small a:last-child {
-  margin-top: 6px;
+ margin-top: 6px;
 }
 .footer div a:first-child::after {
-  content: " ";
-  display: inline-block;
-  width: 1px;
-  height: 14px;
-  background-color: #B2B2B2;
-  margin-left: 4px;
-  vertical-align: -3px;
-  /* vertical-align: bottom; */
+ content: ' ';
+ display: inline-block;
+ width: 1px;
+ height: 14px;
+ background-color: #b2b2b2;
+ margin-left: 4px;
+ vertical-align: -3px;
+ /* vertical-align: bottom; */
 }
+@media all and (min-width: 980px) {
+ .header {
+   height: 63px;
+   color: #00cc49;
+   background-color: #fff;
+   padding: 19px calc(50vw - 490px) 11px;
+   border-bottom: 1px solid #dcdde0;
+ }
+ .logo {
+   margin: 2px 0 28px;
+ }
+ nav {
+   display: flex;
+   justify-content: flex-end;
+   padding-top: 5px;
+ }
+ .nav__btn--mobile {
+   display: none;
+ }
+ .nav__menu {
+   display: flex;
+   font-size: 15px;
+   color: #000;
+ }
+ .nav__menu li {
+   margin-right: 17px;
+ }
+ .nav__menu li:first-child a::before {
+   content: '';
+   display: inline-block;
+   background-image: url('../img/person.svg');
+   width: 15px;
+   height: 15px;
+   margin-right: 6px;
+   vertical-align: -2px;
+ }
+ .nav__menu li:nth-child(2) a::before {
+   content: '';
+   display: inline-block;
+   background-image: url('../img/pencil.svg');
+   width: 15px;
+   height: 15px;
+   margin-right: 6px;
+   vertical-align: -2px;
+ }
+ .nav__menu li:nth-child(3) a {
+   color: #a1a1a1;
+ }
+ /* main */
+ main {
+   margin-top: 35px;
+   padding: 0 calc(50vw - 490px);
+ }
+ .slide {
+   height: 412px;
+ }
+ .slide > div {
+   padding-top: 147px;
+ }
+ .slide em,
+ .slide strong {
+   line-height: 70px;
+   /* letter-spacing: -1px; */
+   /* text-shadow: 2px 2px 6px rgb(0 0 0 / 40%); */
+ }
+ .slide1 em {
+   font-family: 'Outfit', sans-serif;
+   font-size: 66px;
+   font-weight: 700;
+   letter-spacing: 3px;
+ }
+ .left-btn {
+   top: 175px;
+   left: 7px;
+   width: 40px;
+   height: 45px;
+   background: no-repeat url('../img/slide-web-left.svg');
+   background-size: contain;
+   border: none;
+   cursor: pointer;
+ }
+ .right-btn {
+   top: 175px;
+   right: 7px;
+   width: 40px;
+   height: 45px;
+   background: no-repeat 0 6px url('../img/slide-web-right.svg');
+   background-size: contain;
+   border: none;
+   cursor: pointer;
+ }
+ .slide strong {
+   font-size: 41px;
+   font-weight: 600;
+ }
+ .slide2 strong {
+   font-weight: 700;
+   font-size: 50px;
+ }
+ .slide2 em {
+   font-weight: 500;
+   font-size: 52px;
+ }
+ .slide a {
+   font-size: 18px;
+   color: #fff;
+   opacity: 1;
+   background: rgba(232, 232, 232, 0.1);
+   border: 1px solid rgba(232, 232, 232, 0.25);
+   border-radius: 17px;
+ }
+ .slide > div > a::after {
+   margin-left: 3px;
+   margin-top: 0px;
+ }
+ .category {
+   display: grid;
+   grid-template-columns: repeat(4, 1fr);
+   background-color: #ffffff;
+ }
+ .category li {
+   height: 137px;
+   width: 100%;
+   margin: 0 auto;
+   border-left: 13px;
+   padding: 56px 0 55px;
+   border-left: 1px solid #e6e6e6;
+   text-align: center;
+ }
+ .category li:first-child {
+   border-left: none;
+ }
+ .category em {
+   font-size: 21px;
+   letter-spacing: -1px;
+ }
+ .category span {
+   font-size: 15px;
+   font-weight: 400;
+   padding: 4px 7px 3px;
+   border-radius: 11px;
+   vertical-align: baseline;
+ }
+ /* Culture Report */
+ .culture-sect {
+   padding-top: 20px;
+ }
+ .culture-sect > div {
+   padding: 0 50px 40px;
+ }
+ .culture-tit {
+   width: 980px;
+   height: 215px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   font-size: 52px;
+   font-weight: 500;
+   color: #fff;
+   margin: 0 -50px;
+   padding: 0;
+   border-bottom: none;
+   background: no-repeat url(../img/culture-report.jpg);
+ }
+ .list-container h3 {
+   margin-top: 50px;
+   padding-bottom: 17px;
+   border-bottom: none;
+   font-size: 17px;
+ }
+ .second-tit:first-child{
+    margin-top: 26px;
+}
+ .list-container ul {
+   display: grid;
+   grid-template-columns: repeat(auto-fit, 282px);
+   grid-auto-rows: 160px;
+   gap: 17px;
+   letter-spacing: -1px;
+ }
+ .list-container a {
+   width: 276px;
+   height: 154px;
+   display: flex;
+   flex-direction: column;
+   /* justify-content: center; */
+   align-items: center;
+   border: 3px solid #f5f5f5;
+   text-align: center;
+ }
+ .list-container li {
+   padding: 0;
+   border-bottom: none;
+ }
+ .list-container li:first-child {
+   padding: 0;
+ }
+ .list-container li strong {
+   margin: 37px 0 17px;
+   font-size: 20px;
+   color: #2db400;
+ }
+ .list-container li p {
+   display: inline-block;
+   width: 200px;
+   font-weight: 400;
+   line-height: 22px;
+   color: #555;
+ }
+
+}
+ 
+ 
+
